fix: fe layout bug integrate with submission, feedback service

--- a/Front-end/src/admin/layouts/AdminLayoutDefault/AdminLayoutDefault.scss
+++ b/Front-end/src/admin/layouts/AdminLayoutDefault/AdminLayoutDefault.scss
@@ -4,6 +4,8 @@
   display: flex;
   min-height: 100vh;
   font-family: Arial, sans-serif;
+  max-width: 100vw;
+  //overflow-x: auto;
 
   .sidebar {
     background-color: #343a40;
